modified container color

--- a/acmproject.html
+++ b/acmproject.html
@@ -50,8 +50,7 @@
         <div class="acmProjectDescContainer"> <!--Container for the video and the text-->
 
             <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Ltv7Q3NVoFE?si=cSjwuZdZjTaZfSrq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QEibawPAbCc?si=sWikovq-r-yuAaE9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <!--Container for the text and header-->
@@ -81,14 +80,21 @@
     <section class="acmDays">
         <div class="acmDayContainer">
             <div class="acmDayCountContainer">
-                Day 1
+                <div class="acmDayCountContainerTextClass">
+                    Final Project
+                </div>
+
+                <div class="acmButtonContainer">
+                    <button id="open-popup">View Project UI</button>
+                </div>
             </div>
 
             <div class="acmDayTextContainer">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam doloremque ducimus quisquam enim aut similique laudantium dolor? Temporibus qui corrupti nemo, incidunt aliquam culpa a eum atque, voluptatum perspiciatis necessitatibus facilis minima veniam placeat ab sit laborum deserunt tenetur debitis laudantium illum aspernatur at dolore.
+                <div class="acmDayTextContainerClass">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam doloremque ducimus quisquam enim aut similique laudantium dolor? Temporibus qui corrupti nemo, incidunt aliquam culpa a eum atque, voluptatum perspiciatis necessitatibus facilis minima veniam placeat ab sit laborum deserunt tenetur debitis laudantium illum aspernatur at dolore.
+                </div>
             </div>
         </div>
     </section>
-
 </body>
 </html>
