--- a/acmproject.html
+++ b/acmproject.html
@@ -81,11 +81,7 @@
         <div class="acmDayContainer">
             <div class="acmDayCountContainer">
                 <div class="acmDayCountContainerTextClass">
-                    Final Project
-                </div>
-
-                <div class="acmButtonContainer">
-                    <button id="open-popup">View Project UI</button>
+                    Project
                 </div>
             </div>
 
