--- a/acmproject.html
+++ b/acmproject.html
@@ -81,7 +81,7 @@
         <div class="acmDayContainer">
             <div class="acmDayCountContainer">
                 <div class="acmDayCountContainerTextClass">
-                    Project
+                    Final Project
                 </div>
             </div>
 
