--- a/acmproject.html
+++ b/acmproject.html
@@ -101,8 +101,32 @@
         
         <div class="acmProjectDescContainer"> <!--Container for the video and the text-->
 
+            <!--Container for the text and header-->
+            <div class="acmProjectDescContentContainer">
+                <h2>Expert Events</h2><br> <!--Header-->
+                <div class="acmProjectDescContentContainerText"> <!--Container for the text itself-->
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem accusantium amet temporibus nesciunt odit ipsum rerum, totam obcaecati culpa blanditiis voluptates magnam ab sint aperiam. Aperiam dolorum, tempora exercitationem tenetur esse sed voluptatibus modi. Quos omnis quae temporibus architecto maxime molestias, deleniti esse natus quas odio! Molestiae in porro nemo praesentium cupiditate consequatur voluptatum iusto eum? Autem, velit at deserunt inventore nam optio, ipsum officia omnis consectetur atque fugiat maxime corporis praesentium totam nulla non. Asperiores ipsam earum nesciunt maxime similique, officiis, fugiat quod repudiandae eum quaerat quas expedita eligendi eos magnam numquam temporibus! Quas reprehenderit beatae nostrum illum!</p>
+                </div>
+            </div>
+
             <div class="iframe-container">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/oVCbcvjFm3I?si=2k7MgnIhE8Nz2gAR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+
+    <section class="appDemoTitle">
+        <div class="appDemoTitleContainer">
+            <h2>The Skit</h2>
+        </div>
+    </section>
+
+    <section class="acmProjectDesc"> <!--The whole section-->
+        
+        <div class="acmProjectDescContainer"> <!--Container for the video and the text-->
+
+            <div class="iframe-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zTbH-rHD5jo?si=7CxHEI9FH5EBj0-t" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
             </div>
 
             <!--Container for the text and header-->
@@ -290,6 +314,18 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="backButton">
+        <div class="projectButton">
+            <a href="/index.html" id="">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Projects
+            </a>
         </div>
     </section>
 
