--- a/projects.html
+++ b/projects.html
@@ -158,20 +158,20 @@
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
-            
         </div>
     </section>
-    
+
     <section class="backButton">
         <div class="projectButton">
-            <a href="/projects.html" id="">
+            <a href="/index.html" id="">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                Projects
+                Home
             </a>
         </div>
     </section>
+
 </body>
 </html>
