Progress on website

--- a/acmproject.html
+++ b/acmproject.html
@@ -198,7 +198,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/charu_acmimage.jpg">
                     </div>
                 </div>
 
@@ -214,7 +214,7 @@
                         <i class="fa-brands fa-youtube"></i>
                         <i class="fa-brands fa-instagram"></i>
                         <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <i class="fab fa-linkedin"></i>
                     </div>
                 </div>
             </div>
