--- a/index.html
+++ b/index.html
@@ -74,19 +74,17 @@
         <div class="container">
             <div class="row">
                 <div class="image">
-                    <img src="images/avatar-image-portfolio.png" alt="">
+                    <img src="images/dhruvacmimage-removebg-preview.png" alt="">
                 </div>
                 <div class="content">
                     <h2 class="">About me<br></h2><br>
                     <div class="content">
                         <p class="about-text">
-                           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis repellat sit, fugit volup
-                           tatem pariatur nesciunt et reiciendis. Recusandae explicabo mollitia cupiditate sint dolorem aut a. Deserunt hic esse, voluptat
-                           um debitis veniam praesentium odio dolore quae totam et excepturi, doloribus sequi dolores maiores consequuntur facere ipsam, deleniti 
-                           dolorum provident id. Harum minima blanditiis provident dignissimos ipsam
-                           cupiditate porro repellendus voluptas. Eveniet rerum nobis impedit fugit autem fugiat tenetur. Nesciunt, dolor obcaecati ad facilis e
-                           veniet aliquam eos amet ullam voluptatibus quasi enim temporibus ducimus quam officia, nisi labore delectus dolorem nemo modi? Quia doloribus, seq
-                           ui mollitia aspernatur a nobis nam velit illo?
+                            Hey there, I'm <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, a Computer Science undergraduate at the University of Texas at Dallas with plans to graduate in the Spring of 2026. 
+                            My interests lie in software engineering, cybersecurity, and web development, where I'm always eager to explore and innovate. 
+                            I'm skilled in Python, Java, HTML, CSS, JavaScript, and XML, and I'm constantly seeking new challenges to expand my skill set. 
+                            Currently, I'm on the lookout for internships that will allow me to apply my knowledge in real-world scenarios and contribute to exciting projects. 
+                            Take a peek into my portfolio and explore the diverse range of projects I've crafted with passion and precision.
                         </p>
                     </div>
                 </div>
