--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,13 @@
                 <div class="infoContainerText">
                     <h1>What are these projects?</h1>
                     <div class="infoContainerTextPClass">
-                        <p class="infoContainerTextPClassContainer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint voluptates, tenetur eum architecto quidem nostrum assumenda voluptate est laboriosam enim laborum soluta hic reiciendis consequatur impedit tempora suscipit harum necessitatibus. Distinctio voluptatum culpa, tempore aliquam placeat totam nisi dolor dicta impedit? Amet laudantium ea iusto facere in, quidem vel sit voluptatem sunt eligendi quaerat dignissimos, ipsam doloribus neque aspernatur aliquam mollitia repellat maxime provident expedita. Nobis, labore ipsum! Eveniet rerum pariatur reprehenderit eius neque voluptatem quis debitis facilis tempora nesciunt animi delectus asperiores incidunt aliquam architecto maiores commodi fuga voluptate, modi sapiente esse quibusdam. Odit facere inventore harum possimus iure.</p>
+                        <p class="infoContainerTextPClassContainer">
+                            These projects represent a diverse spectrum of innovation and collaboration. GirlYouMatter.org is a 
+                            platform dedicated to advocating for girls globally, while ACM Projects focuses on mobile development using 
+                            Flutter and Firebase. CodePath dives into mobile app creation with XML and Kotlin, and UT Design EPICS delves into robotics, employing 
+                            Vue, HTML, Nuxt, and PRISMA to build a competitive soccer robot. Each project embodies a unique blend of creativity, technology, and purpose, 
+                            showcasing the boundless possibilities of modern design and engineering.
+                        </p>
                     </div>
                 </div>
             </div>
