new pages, photos and componentization of code

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhruv Tripathi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -56,6 +57,7 @@
                 <h3 class="text02">My name is Dhruv Tripathi</h3>
                 <p class="text02-style">CS Undergrad @UTD. Future Software Engineer. Designer.</p>
             </div>
+            
         </div>
 
         <!--For the Who am I button-->
