--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="acmproject.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -116,51 +120,59 @@
     <section class="timelineContainer">
         <div class="timeline">
             <div class="container-4 left-container">
-                <img src="images/acmutd.jpg">
+                <img src="images/girlyoumatter-logo.png">
                 <div class="text-box-container">
-                    <h2>Alphabet Inc.</h2>
-                    <small>2018-2019</small>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat iusto nam natus velit ullam.</p>
+                    <h2>Girl You Matter</h2>
+                    <small>Aug 2023 - Present</small>
+                    <p>Built a website with multiple versions, V1, V2 and currently V3 for
+                        a non-profit organization that empowers girls transitions from middle school
+                        to high school
+                    </p>
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
             
             <div class="container-4 right-container">
-                <img src="images/epicslogo-removebg-preview.png">
+                <img src="images/acmutd.jpg">
                 <div class="text-box-container">
-                    <h2>Amazon Inc.</h2>
-                    <small>2019-2020</small>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat iusto nam natus velit ullam.</p>
+                    <h2>ACM Projects</h2>
+                    <small>Jan 2024 - April 2024</small>
+                    <p>Semester long project building a mobile app called ExpertEvents
+                    </p>
                     <span class="right-container-arrow"></span>
                 </div>
             </div>
 
             <div class="container-4 left-container">
-                <img src="images/girlyoumatter-logo.png">
+                <img src="images/epicslogo-removebg-preview.png">
                 <div class="text-box-container">
-                    <h2>Tesla Inc.</h2>
-                    <small>2020-2021</small>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat iusto nam natus velit ullam.</p>
+                    <h2>UT Design EPICS 2023</h2>
+                    <small>Jan 2024 - April 2024</small>
+                    <p>Semester long project building a soccer robot livestream as well as 
+                        working with the engineering team to build 2 robots that users can play
+                    </p>
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
 
             <div class="container-4 right-container">
-                <img src="images/computerlogo.png">
+                <img src="images/codepathlogo.jpg">
                 <div class="text-box-container">
-                    <h2>Toyota</h2>
-                    <small>2021-2022</small>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat iusto nam natus velit ullam.</p>
+                    <h2>Intro to Android App Development 101</h2>
+                    <small>Jan 2024 - April 2024</small>
+                    <p>Semester long course that contained mini-units of android development and small mini-projects</p>
                     <span class="right-container-arrow"></span>
                 </div>
             </div>
 
             <div class="container-4 left-container">
-                <img src="images/acmutd.jpg">
+                <img src="images/computerlogo.png">
                 <div class="text-box-container">
-                    <h2>Alphabet Inc.</h2>
-                    <small>2018-2019</small>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat iusto nam natus velit ullam.</p>
+                    <h2>Personal Porfolio Website</h2>
+                    <small>April 2024 - Present</small>
+                    <p>A personal website that contains all projects, about me and a place
+                        to show off my skills
+                    </p>
                     <span class="left-container-arrow"></span>
                 </div>
             </div>
