--- a/acmproject.html
+++ b/acmproject.html
@@ -4,8 +4,10 @@
     <title>ACM Project</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="acmproject.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -38,7 +40,9 @@
                         <h2>ACM</h2>
                     </div>
                     <div class="acmFullName">
-                        <p>Association for Computing Machinery</p>
+                        <p><span class="letter">A</span>ssociation for 
+                            <span class="letter">C</span>omputing 
+                            <span class="letter">M</span>achinery</p>
                     </div>
                 </div>
             </div>
@@ -55,9 +59,16 @@
 
             <!--Container for the text and header-->
             <div class="acmProjectDescContentContainer">
-                <h2>About this project</h2><br> <!--Header-->
-                <div class="acmProjectDescContentContainerText"> <!--Container for the text itself-->
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem accusantium amet temporibus nesciunt odit ipsum rerum, totam obcaecati culpa blanditiis voluptates magnam ab sint aperiam. Aperiam dolorum, tempora exercitationem tenetur esse sed voluptatibus modi. Quos omnis quae temporibus architecto maxime molestias, deleniti esse natus quas odio! Molestiae in porro nemo praesentium cupiditate consequatur voluptatum iusto eum? Autem, velit at deserunt inventore nam optio, ipsum officia omnis consectetur atque fugiat maxime corporis praesentium totam nulla non. Asperiores ipsam earum nesciunt maxime similique, officiis, fugiat quod repudiandae eum quaerat quas expedita eligendi eos magnam numquam temporibus! Quas reprehenderit beatae nostrum illum!</p>
+                <h2>Project Description</h2><br> <!--Header-->
+                <div class="acmProjectDescContentContainerText">
+                    <p>Are you a student struggling to attract attendees for your organization's events through posters and Instagram posts?
+                         Do you often miss out on exciting campus events because you only learn about them after they've concluded? 
+                         ExpertEvents enables organizers to promote events to the entire student population.
+                          It allows students to stay informed about campus happenings, effortlessly notifying and inviting friends. 
+                          Engage in discussions through our in-app community space, and seamlessly integrate events with your calendar app.
+                           ExpertEvents keeps you in the loop with real-time notifications. Join ExpertEvents today, where events come to life, and the UTD campus community thrives.
+                           Skip to 1:43:47 to see our presentation.
+                    </p> <!--Container for the text itself-->
                 </div>
             </div>
         </div>
@@ -104,8 +115,12 @@
             <!--Container for the text and header-->
             <div class="acmProjectDescContentContainer">
                 <h2>Expert Events</h2><br> <!--Header-->
-                <div class="acmProjectDescContentContainerText"> <!--Container for the text itself-->
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem accusantium amet temporibus nesciunt odit ipsum rerum, totam obcaecati culpa blanditiis voluptates magnam ab sint aperiam. Aperiam dolorum, tempora exercitationem tenetur esse sed voluptatibus modi. Quos omnis quae temporibus architecto maxime molestias, deleniti esse natus quas odio! Molestiae in porro nemo praesentium cupiditate consequatur voluptatum iusto eum? Autem, velit at deserunt inventore nam optio, ipsum officia omnis consectetur atque fugiat maxime corporis praesentium totam nulla non. Asperiores ipsam earum nesciunt maxime similique, officiis, fugiat quod repudiandae eum quaerat quas expedita eligendi eos magnam numquam temporibus! Quas reprehenderit beatae nostrum illum!</p>
+                <div class="acmProjectDescContentContainerText">
+                    <p>Shruti Gupta, one of our talented front-end team member, meticulously crafted a comprehensive video walkthrough of our app. This video, originally featured in the slides, is now conveniently available here for your viewing pleasure.
+                        Join us on a journey through the intricacies of our application, exploring its myriad features and seamless user experience. From sleek design elements to innovative functionalities, our app is a testament to our commitment to excellence.
+                        
+                        Sit back, relax, and immerse yourself in the awesomeness of our app as you follow Shruti's expert guidance through this captivating video tour. Welcome to a world where innovation thrives and user satisfaction reigns supreme.
+                    </p> <!--Container for the text itself-->
                 </div>
             </div>
 
@@ -132,8 +147,11 @@
             <!--Container for the text and header-->
             <div class="acmProjectDescContentContainer">
                 <h2>Expert Events</h2><br> <!--Header-->
-                <div class="acmProjectDescContentContainerText"> <!--Container for the text itself-->
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut voluptatem accusantium amet temporibus nesciunt odit ipsum rerum, totam obcaecati culpa blanditiis voluptates magnam ab sint aperiam. Aperiam dolorum, tempora exercitationem tenetur esse sed voluptatibus modi. Quos omnis quae temporibus architecto maxime molestias, deleniti esse natus quas odio! Molestiae in porro nemo praesentium cupiditate consequatur voluptatum iusto eum? Autem, velit at deserunt inventore nam optio, ipsum officia omnis consectetur atque fugiat maxime corporis praesentium totam nulla non. Asperiores ipsam earum nesciunt maxime similique, officiis, fugiat quod repudiandae eum quaerat quas expedita eligendi eos magnam numquam temporibus! Quas reprehenderit beatae nostrum illum!</p>
+                <div class="acmProjectDescContentContainerText">
+                    <p>Prepare to be dazzled by our exceptional cast: Dhruv Tripathi, Charu Yuvaraj, Shruti Gupta, and Sifat Islam. Their performances have elevated our project to new heights, 
+                        each bringing their own unique charisma and skill to the stage. From Dhruv's magnetic presence to Charu's captivating delivery, from Shruti's precision to Sifat's versatility, 
+                        their collective talent shines brightly in every scene. 
+                        Join us as we celebrate their contributions to our skit, where their artistry transforms our vision into an unforgettable experience for all who witness it.                        <!--Container for the text itself-->
                 </div>
             </div>
         </div>
@@ -150,7 +168,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/shrutiguptaphoto.png">
                     </div>
                 </div>
 
@@ -163,10 +181,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.linkedin.com/in/shruti-gupta-28a015290"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -174,7 +189,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/dhruvphoto3.png">
                     </div>
                 </div>
 
@@ -187,10 +202,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -198,7 +210,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/charu_acmimage.jpg">
+                        <img src="images/charuyuvarajphoto2.png">
                     </div>
                 </div>
 
@@ -211,10 +223,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fab fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/charumitha-y/"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -222,7 +231,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/seeyannewazphoto.png">
                     </div>
                 </div>
 
@@ -235,10 +244,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.linkedin.com/in/seeyan-newaz"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -246,7 +252,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/sifatislamphoto.png">
                     </div>
                 </div>
 
@@ -259,10 +265,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.linkedin.com/in/sifat-islam"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -270,7 +273,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/nadeebaAphoto.png">
                     </div>
                 </div>
 
@@ -283,10 +286,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.linkedin.com/in/nadeeba-atiqui-b3331a26a"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -294,7 +294,7 @@
             <div class="user">
                 <div class="user-img-wrap">
                     <div class="user-img">
-                        <img src="images/avatar-image-portfolio.png">
+                        <img src="images/samphoto2.png">
                     </div>
                 </div>
 
@@ -307,10 +307,7 @@
                         ExpertEvents
                     </div>
                     <div class="user-profiles">
-                        <i class="fa-brands fa-youtube"></i>
-                        <i class="fa-brands fa-instagram"></i>
-                        <i class="fa-brands fa-x-twitter"></i>
-                        <i class="fa-brands fa-whatsapp"></i>
+                        <a href="https://www.linkedin.com/in/samuel-stegall-785b84128"><i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -324,7 +321,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
-                Projects
+                Home
             </a>
         </div>
     </section>
