colorful letters added

--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,8 @@
                         <h2>My Projects</h2>
                     </div>
                     <div class="acmFullName">
-                        <p>Computer Science</p>
+                        <p><span class="letter">C</span>omputer 
+                            <span class="letter">S</span>cience</p>
                     </div>
                 </div>
             </div>
