resume page added, epics page done, links work for navigation between pages

--- a/acmproject.html
+++ b/acmproject.html
@@ -347,12 +347,12 @@
 
     <section class="backButton">
         <div class="projectButton">
-            <a href="/index.html" id="">
+            <a href="/projects.html" id="">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                Home
+                Projects
             </a>
         </div>
     </section>
