--- a/epics.html
+++ b/epics.html
@@ -28,7 +28,7 @@
                 <a href="/index.html" style="--i:0;">Home<span></span></a>
                 <!-- <a href="#" style="--i:1;">About<span></span></a> -->
                 <!-- <a href="#" style="--i:2;">Projects<span></span></a> -->
-                <a href="#" style="--i:3;">Resume<span></span></a>
+                <a href="resume.html" style="--i:3;">Resume<span></span></a>
                 <a href="#" style="--i:4;">Contact<span></span></a>
             </nav>
         </header>
@@ -287,12 +287,24 @@
                         Soccer Robot CS
                     </div>
                     <div class="user-profiles">
-                        <a href="https://utdesign.utdallas.edu/contact/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://utdesign.utdallas.edu/contact/"><i class="fas fa-phone"></i></a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     
+    <section class="backButton">
+        <div class="projectButton">
+            <a href="/projects.html" id="">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Projects
+            </a>
+        </div>
+    </section>
+
 </body>
 </html>
