--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -26,7 +26,7 @@
                 <a href="/index.html" style="--i:0;">Home<span></span></a>
                 <!-- <a href="#" style="--i:1;">About<span></span></a> -->
                 <!-- <a href="#" style="--i:2;">Projects<span></span></a> -->
-                <a href="#" style="--i:3;">Resume<span></span></a>
+                <a href="resume.html" style="--i:3;">Resume<span></span></a>
                 <a href="#" style="--i:4;">Contact<span></span></a>
             </nav>
         </header>
