new typing text animation on homepage

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 <body>
     <div class="wrapperBox">
@@ -55,9 +56,12 @@
 
             <div class="text02andstyle">
                 <h3 class="text02">My name is Dhruv Tripathi</h3>
-                <p class="text02-style">CS Undergrad @UTD. Future Software Engineer. Designer.</p>
+                <p class="text02-style">CS Undergrad @UTD. Future Cybersecurity Professional. Designer.</p>
+
+                <div class="text-container02">
+                    <h3>and I'm <span class="auto-type"></span></h3>
+                </div>
             </div>
-            
         </div>
 
         <!--For the Who am I button-->
