made animated boxes span larger height

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 </head>
 <body>
-    <div class="wrapperBox">
+    <!-- <div class="wrapperBox">
         <div class="box">
             <div></div>
             <div></div>
@@ -25,7 +25,7 @@
             <div></div>
             <div></div>
         </div>
-    </div>
+    </div> -->
 
     <!--For the header & logo-->
     <header class="header">
@@ -62,6 +62,22 @@
                     <h3>and I'm <span class="auto-type"></span></h3>
                 </div>
             </div>
+
+            <div class="wrapperBox">
+                <div class="box">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            
         </div>
 
         <!--For the Who am I button-->
