new lightbox transition on girlyoumatter page

--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="girlyoumatter.css">
+    <link rel="stylesheet" href="lightbox.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="lightboxJS.js"></script>
 </head>
 <body>
     <!--https://github.com/UTDallasEPICS/Soccer-Robot-Web-->
@@ -47,5 +50,68 @@
                 </div>
             </div>
         </section>
+
+        <section class="gumProject">
+            <div class="gumProjectContainer">
+                <div class="gumProjectContainerRow">
+                    <div class="gumImageContainer">
+                        <a href="https://girlyoumatter.org"><img src="girlyoumatterimages/girlyoumatterSS.png">
+                        </a>
+                    </div>
+                    <div class="gumProjectDescText">
+                        <h2>Project Description</h2> <br>
+                        <div class="gumProjectDescPClass">
+                            <p class="gumProjectContainerTextPClassContainer">
+                            Girlyoumatter.org is a dynamic web platform designed to empower girls during their 
+                            transition from middle school to high school. With a user-friendly interface crafted using HTML, CSS, and JS, the 
+                            site offers a wealth of resources, advice, and support tailored to the unique challenges young girls face during this pivotal time in their lives. 
+                            From academic guidance to self-esteem boosting tips, Girlyoumatter.org aims to foster confidence, resilience, and a sense of belonging as
+                            girls embark on their high school journey
+                        </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Github: https://github.com/lokesh/lightbox2-->
+
+        <section class="imageGallery">
+            <div class="imageGalleryContainer">
+                <div class="imageGalleryContainerContainer"> <!--8 images for grid display (add more if needed)-->
+                    <a href="girlyoumatterimages/girlyoumatterSS.png" data-lightbox="models" data-title="Front page">
+                        <img src="girlyoumatterimages/girlyoumatterSS.png" alt="">
+                    </a>
+                    
+                    <a href="girlyoumatterimages/aboutuspage.png" data-lightbox="models" data-title="About us page">
+                        <img src="girlyoumatterimages/aboutuspage.png" alt="">
+                    </a>
+
+                    <a href="girlyoumatterimages/commentform1.png" data-lightbox="models" data-title="Contacts page comment form">
+                        <img src="girlyoumatterimages/commentform1.png" alt="">
+                    </a>
+
+                    <a href="girlyoumatterimages/commentform2.png" data-lightbox="models" data-title="Workshops page comment form">
+                        <img src="girlyoumatterimages/commentform2.png" alt="">
+                    </a>
+
+                    <a href="girlyoumatterimages/FAQ.png" data-lightbox="models" data-title="Frequently Asked Questions">
+                        <img src="girlyoumatterimages/FAQ.png" alt="">
+                    </a>
+
+                    <a href="girlyoumatterimages/whyyoumatter.png" data-lightbox="models" data-title="Why you matter - Front page">
+                        <img src="girlyoumatterimages/whyyoumatter.png" alt="">
+                    </a>
+
+                    <a href="girlyoumatterimages/workshopdetail.png" data-lightbox="models" data-title="Workshops description page">
+                        <img src="girlyoumatterimages/workshopdetail.png" alt="">
+                    </a>
+
+                    <a href="girlyoumatterimages/workshoppage.png" data-lightbox="models" data-title="Workshops - Front page">
+                        <img src="girlyoumatterimages/workshoppage.png" alt="">
+                    </a>
+                    
+                </div>
+            </div>
 </body>
 </html>
