--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="girlyoumatter.css">
     <link rel="stylesheet" href="lightbox.css">
+    <link rel="stylesheet" href="acmproject.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="lightboxJS.js"></script>
 </head>
@@ -66,7 +67,7 @@
                             transition from middle school to high school. With a user-friendly interface crafted using HTML, CSS, and JS, the 
                             site offers a wealth of resources, advice, and support tailored to the unique challenges young girls face during this pivotal time in their lives. 
                             From academic guidance to self-esteem boosting tips, Girlyoumatter.org aims to foster confidence, resilience, and a sense of belonging as
-                            girls embark on their high school journey
+                            girls embark on their high school journey. Click on one of the images below to get a better look.
                         </p>
                         </div>
                     </div>
@@ -113,5 +114,41 @@
                     
                 </div>
             </div>
+
+            </section>
+
+    <section class="techStack">
+        <div class="techStackContainer">
+
+            <h2 class="techStackHeader">Tech Stack Used</h2>
+
+            <div class="techStackbox-container">
+                
+                <div class="techStackBox">
+                    <img src="images/HTMLLogo.png" alt="">
+                    <h3>HTML</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+
+                <div class="techStackBox">
+                    <img src="images/CSS-Logo.png" alt="">
+                    <h3>CSS</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+
+                <div class="techStackBox">
+                    <img src="images/JavaScript-Logo.png" alt="">
+                    <h3>JavaScript</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+
+                <div class="techStackBox">
+                    <img src="images/girlyoumatter-logo.png" alt="">
+                    <h3>Girl You Matter</h3>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </div>
+            </div>
+        </div>
+    </section>            
 </body>
 </html>
