added tech stack in girlyoumatter project

--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -117,38 +117,142 @@
 
             </section>
 
+            <section class="appDemoTitle">
+                <div class="appDemoTitleContainer">
+                    <h2>Tech Stack Used & Website</h2>
+                </div>
+            </section>
+
     <section class="techStack">
         <div class="techStackContainer">
+            <div class="techStackUsed">
 
-            <h2 class="techStackHeader">Tech Stack Used</h2>
+                <!--the image-->
 
-            <div class="techStackbox-container">
-                
-                <div class="techStackBox">
-                    <img src="images/HTMLLogo.png" alt="">
-                    <h3>HTML</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                <div class="teckStackImageWrap">
+                    <div class="techStackImage">
+                        <img src="images/htmlimage6.png" alt="">
+                    </div>
                 </div>
 
-                <div class="techStackBox">
-                    <img src="images/CSS-Logo.png" alt="">
-                    <h3>CSS</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
+                <!--What the card contains-->
+                <div class="techStack-meta">
+                    <div class="techName">
+                        HTML
+                    </div>
+
+                    <div class="techStackDesc">
+                        Hypertext Markup Language
+                    </div>
+
+                    <div class="techReadMore">
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" class="btn">Read More</a>
+                    </div>
+
                 </div>
 
-                <div class="techStackBox">
-                    <img src="images/JavaScript-Logo.png" alt="">
-                    <h3>JavaScript</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
-
-                <div class="techStackBox">
-                    <img src="images/girlyoumatter-logo.png" alt="">
-                    <h3>Girl You Matter</h3>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </div>
             </div>
+
+
+            <div class="techStackUsed">
+
+                <!--the image-->
+
+                <div class="teckStackImageWrap">
+                    <div class="techStackImage">
+                        <img src="images/csslogo3.svg" alt="">
+                    </div>
+                </div>
+
+                <!--What the card contains-->
+                <div class="techStack-meta">
+                    <div class="techName">
+                        CSS
+                    </div>
+
+                    <div class="techStackDesc">
+                        Cascading Style Sheets                     
+                    </div>
+
+                    <div class="techReadMore">
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" class="btn">Read More</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+
+            <div class="techStackUsed">
+
+                <!--the image-->
+
+                <div class="teckStackImageWrap">
+                    <div class="techStackImage">
+                        <img src="images/jslogo.png" alt="">
+                    </div>
+                </div>
+
+                <!--What the card contains-->
+                <div class="techStack-meta">
+                    <div class="techName">
+                        JS
+                    </div>
+
+                    <div class="techStackDesc">
+                        Javascript
+                    </div>
+
+                    <div class="techReadMore">
+                        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" class="btn">Read More</a>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="techStackUsed">
+
+                <!--the image-->
+
+                <div class="teckStackImageWrap">
+                    <div class="techStackImage">
+                        <img src="images/girlyoumatter-logo.png" alt="">
+                    </div>
+                </div>
+
+                <!--What the card contains-->
+                <div class="techStack-meta">
+                    <div class="techName">
+                        GUM
+                    </div>
+
+                    <div class="techStackDesc">
+                       Girl You Matter
+                    </div>
+
+                    <div class="techReadMore">
+                        <a href="https://girlyoumatter.org/" class="btn">Read More</a>
+                    </div>
+
+                </div>
+
+            </div>
+
         </div>
-    </section>            
+    </section>
+
+    <section class="backButton">
+        <div class="projectButton">
+            <a href="/projects.html" id="">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Projects
+            </a>
+        </div>
+    </section>
+
 </body>
 </html>
