--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                     <h2 class="">About me<br></h2><br>
                     <div class="content">
                         <p class="about-text">
-                            Hey there, I'm <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, a Computer Science undergraduate at the University of Texas at Dallas with plans to graduate in the Spring of 2026. 
+                            Hey there, I'm <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, a Computer Science undergraduate at the
+                             University of Texas at Dallas with plans to graduate in the Spring of 2027. 
                             My interests lie in software engineering, cybersecurity, and web development, where I'm always eager to explore and innovate. 
                             I'm skilled in Python, Java, HTML, CSS, JavaScript, and XML, and I'm constantly seeking new challenges to expand my skill set. 
                             Currently, I'm on the lookout for internships that will allow me to apply my knowledge in real-world scenarios and contribute to exciting projects. 
