--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -242,6 +242,23 @@
         </div>
     </section>
 
+    <section class="steps">
+        <div class="stepContainer">
+            <div class="stepContent">
+                <div class="leftStepContent">
+                    August 2023
+                </div>
+
+                <div class="rightStepContent">
+                    Version 1 of the website has been launched. At this initial stage, my knowledge of HTML, CSS,
+                    and JavaScript is still in its infancy. Buttons lack styling, container knowledge is limited, animations are absent,
+                     and the overall design is basic. This reflects my early foray into website development, where concepts like flex-boxes,
+                      media queries, and proper styling are still unfamiliar territory.
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section class="backButton">
         <div class="projectButton">
             <a href="/projects.html" id="">
