changed techstack to use better grid

--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -256,6 +256,39 @@
                       media queries, and proper styling are still unfamiliar territory.
                 </div>
             </div>
+
+            <div class="stepContent">
+                <div class="leftStepContent">
+                    October 2023
+                </div>
+
+                <div class="rightStepContent">
+                    The launch of Version 2 marks a significant milestone for the website. While I possess intermediate
+                     proficiency in HTML, CSS, and JS, I encountered 
+                    substantial gaps in understanding HTML structuring, containers, and 
+                    flexboxes during the development process. Nonetheless, 
+                    I gradually familiarized myself with media queries, enhancing my CSS skills in the process. 
+                    Additionally, I lacked knowledge about animations and their implementation, 
+                    presenting an area for further exploration and improvement.
+                </div>
+            </div>
+
+            <div class="stepContent">
+                <div class="leftStepContent">
+                    January 2024
+                </div>
+
+                <div class="rightStepContent">
+                    Version 3 of the website is now live, representing a significant advancement. 
+                    My proficiency in HTML, CSS, and JavaScript has progressed from intermediate to advanced levels. 
+                    I now possess a robust understanding of HTML containers, flexboxes, and sections, 
+                    accompanied by improved CSS skills,
+                     including the integration of subtle animations. This development journey has inspired 
+                     the creation of my portfolio website, showcasing my advanced expertise in frontend development,
+                      encompassing flexboxes, animations, sections, flex-wrap, text manipulation, and other essential skills.
+                </div>
+            </div>
+
         </div>
     </section>
 
