--- a/codepath.html
+++ b/codepath.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Codepath Project</title>
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="projects.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="CSSComponents/header.css">
+    <link rel="stylesheet" href="CSSComponents/projects.css">
+    <link rel="stylesheet" href="CSSComponents/index.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
