--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Girl You Matter Project</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="projects.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="girlyoumatter.css">
-    <link rel="stylesheet" href="lightbox.css">
-    <link rel="stylesheet" href="acmproject.css">
+    <link rel="stylesheet" href="CSSComponents/normalize.css">
+    <link rel="stylesheet" href="CSSComponents/header.css">
+    <link rel="stylesheet" href="CSSComponents/projects.css">
+    <link rel="stylesheet" href="CSSComponents/index.css">
+    <link rel="stylesheet" href="CSSComponents/girlyoumatter.css">
+    <link rel="stylesheet" href="CSSComponents/lightbox.css">
+    <link rel="stylesheet" href="CSSComponents/acmproject.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="lightboxJS.js"></script>
 </head>
