--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhruv Tripathi</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="CSSComponents/index.css">
+    <link rel="stylesheet" href="CSSComponents/normalize.css">
+    <link rel="stylesheet" href="CSSComponents/header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
