--- a/projects.html
+++ b/projects.html
@@ -4,11 +4,11 @@
     <title>My Projects</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="projects.css">
-    <link rel="stylesheet" href="acmproject.css">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="CSSComponents/projects.css">
+    <link rel="stylesheet" href="CSSComponents/acmproject.css">
+    <link rel="stylesheet" href="CSSComponents/header.css">
+    <link rel="stylesheet" href="CSSComponents/index.css">
+    <link rel="stylesheet" href="CSSComponents/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
