--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="projects.css">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="acmproject.css">
-    <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="CSSComponents/resume.css">
     <link rel="stylesheet" href="epics.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
