fixed grid on projects page, also added test page for testing

--- a/testpage.html
+++ b/testpage.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="CSSComponents/resume.css">
     <link rel="stylesheet" href="CSSComponents/epics.css">
     <link rel="stylesheet" href="CSSComponents/normalize.css">
+    <link rel="stylesheet" href="CSSComponents/testpage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -52,10 +53,42 @@
         </div>
     </section>
 
-    <section class="resumeSection">
-        <div class="resumeOuterContainer">
-            <div class="resumeInnerContainer">
-                <img src="images/Tripathi_-Dhruv-UPDATED-Resume.svg" alt="">
+    <section class="testContainer">
+        <div class="contain">
+            <div class="containRow">
+                
+                <div class="hoveringContainer">
+                    <div class="outterimgwrap">
+                        <div class="imgwrap">
+                            <img src="images/girlyoumatter-logo.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hoveringContainer">
+                    <div class="outterimgwrap">
+                        <div class="imgwrap">
+                            <img src="images/acmutd.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hoveringContainer">
+                    <div class="outterimgwrap">
+                        <div class="imgwrap">
+                            <img src="images/epicslogo-removebg-preview.png" alt="">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hoveringContainer">
+                    <div class="outterimgwrap">
+                        <div class="imgwrap">
+                            <img src="images/codepathlogo.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
