--- a/testpage.html
+++ b/testpage.html
@@ -18,6 +18,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
+    <!--THIS PAGE IS ONLY FOR TESTING AKA NOT IMPORTANT-->
     <!--For the header & logo-->
     <header class="header">
         <a href="#" class="logo">Dhruv Tripathi</a>
