--- a/resume.html
+++ b/resume.html
@@ -52,11 +52,33 @@
         </div>
     </section>
 
+    <section class="downloadButtonSection">
+        <div class="downloadButtonContainer">
+            <div class="downloadButton">
+                <a href="images/Tripathi, Dhruv - UPDATED Resume.pdf" download='Tripathi, Dhruv Resume'
+                class="download-btn">Download Resume
+                    <i class="fas fa-download"></i></a>
+            </div>
+        </div>
+    </section>
+
     <section class="resumeSection">
         <div class="resumeOuterContainer">
             <div class="resumeInnerContainer">
                 <img src="images/Tripathi_-Dhruv-UPDATED-Resume.svg" alt="">
             </div>
+        </div>
+    </section>
+
+    <section class="backButton">
+        <div class="projectButton">
+            <a href="/projects.html" id="">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Projects
+            </a>
         </div>
     </section>
 
