--- a/codepath.html
+++ b/codepath.html
@@ -28,7 +28,7 @@
                 <!-- <a href="#" style="--i:1;">About<span></span></a> -->
                 <!-- <a href="#" style="--i:2;">Projects<span></span></a> -->
                 <a href="resume.html" style="--i:3;">Resume<span></span></a>
-                <a href="#" style="--i:4;">Contact<span></span></a>
+                <a href="contact.html" style="--i:4;">Contact<span></span></a>
             </nav>
         </header>
 
