small edits, contact page done

--- a/acmproject.html
+++ b/acmproject.html
@@ -68,7 +68,7 @@
                           It allows students to stay informed about campus happenings, effortlessly notifying and inviting friends. 
                           Engage in discussions through our in-app community space, and seamlessly integrate events with your calendar app.
                            ExpertEvents keeps you in the loop with real-time notifications. Join ExpertEvents today, where events come to life, and the UTD campus community thrives.
-                           Skip to 1:43:47 to see our presentation.
+                           Skip to <span class="acmTime">1:43:47</span> to see our presentation.
                     </p> <!--Container for the text itself-->
                 </div>
             </div>
